trying to avoid landscape rotation on mobile

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -677,16 +677,16 @@ section.home {
 
           &:nth-child(2) {
             right: 283px;
-            top: 122px;
+            top: 175px;
             width: 260px;
-            height: 430px;
+            height: 330px;
             z-index: 1000;
             transform: rotate(-2deg);
           }
 
           &:nth-child(3) {
             top: -36px;
-            left: 407px;
+            left: 567px;
             height: 564px;
             width: 355px;
           }
